--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1">
-    <title>Tic Tac Toe</title>
+    <title>Online Tic Tac Toe</title>
 
-    <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="script/jquery.js"></script>
     <script src="script/socketio.js"></script>
 
     <link href='http://fonts.googleapis.com/css?family=Roboto:500,400,300,700' rel='stylesheet' type='text/css'>
@@ -24,7 +24,7 @@
     </div>
     <div id="game" class="hidden">
         <header>
-            <span id="score">0 - 0</span>
+            <span id="title">Online Tic Tac Toe</span>
         </header>
         <div id="tableContainer">
         </div>
